--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My React SPA</title>
+  <title>My Blog!!</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
